--- a/budget.html
+++ b/budget.html
@@ -4,11 +4,7 @@
 </head>
 
 <body>
-<center>
-	<div id="intro">
-  		<h1>Budget Planner Thing</h1>
-	</div>
-</center>
+
   
 </body>
 
@@ -18,6 +14,11 @@
 </template>
 
 <template name= "register">
+	<center>
+	<div id="intro">
+  		<h1>Budget Planner Thing</h1>
+	</div>
+</center>
 	<center>
 	<form id="register" action="action">
      	 <div>
@@ -35,6 +36,11 @@
 
 <template name= "login">
 	<center>
+	<div id="intro">
+  		<h1>Budget Planner Thing</h1>
+	</div>
+</center>
+	<center>
 	<form id="login" action="action">
      	 <div>
         	<h6>Email</h6><input type="email" id="login-email" name="email" placeholder="abc@123.com" /><br>
@@ -43,6 +49,13 @@
      	</div>
    </form> 
 </center>
+</template>
+<template name= "home">
+	<center>
+	<div id="intro">
+  		<h1>Welcome!</h1>
+	</div>
+	</center>
 </template>
 
 
