added more pages

--- a/budget.html
+++ b/budget.html
@@ -56,6 +56,48 @@
   		<h1>Welcome!</h1>
 	</div>
 	</center>
+	<div id='cssmenu'>
+			<ul>
+			   <li><a href='/home'>Home</a></li>
+			   <li><a href='/create'>Create a Budget</a></li>
+			   <li><a href='/view'>View Created Budgets</a></li>
+			   <li><a href='/logout'>Log Out</a></li>
+			</ul>
+	</div>
 </template>
+
+<template name= "create">
+	<center>
+		<div id="intro">
+			<h1>Create Your Own Budget!</h1>
+		</div>
+
+	</center>
+		<div id='cssmenu'>
+			<ul>
+			   <li><a href='/home'>Home</a></li>
+			   <li><a href='/create'>Create a Budget</a></li>
+			   <li><a href='/view'>View Created Budgets</a></li>
+			   <li><a href='/logout'>Log Out</a></li>
+			</ul>
+	</div>
+</template>
+
+<template name= "view">
+	<center>
+		<div id="intro">
+			<h1>Submitted</h1>
+		</div>
+	</center>
+		<div id='cssmenu'>
+			<ul>
+			   <li><a href='/home'>Home</a></li>
+			   <li><a href='/create'>Create a Budget</a></li>
+			   <li><a href='/view'>View Created Budgets</a></li>
+			   <li><a href='/logout'>Log Out</a></li>
+			</ul>
+	</div>
+</template>
+
 
 
